--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="forumCategory">
+        <item>Pilih Kategori</item>
+        <item>Komputer</item>
+        <item>Laptop</item>
+        <item>Smartphone</item>
+    </string-array>
 </resources>
